[Mac] Hide the "Customize Touch Bar" menu item

The menu item needs to be removed from the main
menu when the kBrowserTouchBar flag is disabled.

Bug: 749802
Change-Id: I71258f8f9cd9adba433444c6656a6e6a0699fe18
Reviewed-on: https://chromium-review.googlesource.com/590696
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490081}
Former-commit-id: 210e2ede6cd475c57e7014b48220790b916d0caf